2003-01-07  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspComponentFoundry.cs: reworked to allow same prefix for multiple
	controls. You can register 1 assembly plus any number of user controls
	under the same prefix.

	* AspGenerator.cs: don't add duplicate 'using' for the same namespace.
	Hack to allow @Register access to assemblies in other places than bin
	directory.

2003-01-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspElements.cs: added 'codebehind' attribute for page, control and
	application. It's ignored by MS, but allowed. Fixed typo.

2003-01-06  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: fixed EnableSesssionState handling.

2003-01-05  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: don't generate instance fields for pages/controls
	when the base class specified in the Inherits attribute already has
	them. Closes bug #36262.

2002-12-19  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: generate code like 'control.XXX = value' also for
	public fields (properties were being handled in that way too).

2002-12-18  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: now it uses the current HttpContext when creating
	user controls. TemplateSourceDirectory is no longer a dummy value.

	* GlobalAsaxCompiler.cs:
	* PageCompiler.cs:
	* UserControlCompiler.cs: set the context which will be used to locate
	the files.
	
2002-12-13  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspGenerator.cs: added support for AutoEventWireup attribute in
	@Page and @Control.

	* CompilationResult.cs:
	* GlobalAsaxCompiler.cs:
	* PageCompiler.cs:
	* UserControlCompiler.cs: store the options.

2002-12-12  Gonzalo Paniagua Javier <gonzalo@ximian.com>

	* AspElements.cs: new method Tag.GetElements
	used to parse the inner contents of a tag looking for data binding or 
	code render tags.
	
	New property HtmlControlTag.ParseChildren allows